# hn-jobs-search

./: .gitignore  README.md  docker-compose.yml  main.py  pyproject.toml
src/db/: crud.py  engine.py
src/job_parsers/: ollama_job_parser.py
src/models/: job_model.py
src/scrapper/: scrapper.py
