[project]
name = "hn-jobs-search"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "dateparser>=1.2.2",
    "ollama>=0.6.1",
    "pydantic>=2.12.5",
    "requests>=2.32.5",
    "sqlmodel>=0.0.31",
    "tqdm>=4.67.1",
]
